add tumor only func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(get_counts)
 export(plot_mosdepth)
 export(plot_mosdepth_tn)
 export(prep_ascat)
+export(prep_ascat_t)
 export(segment_logR)
 import(DNAcopy)
 import(data.table)
